--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 </script> -->
 <script src="assets/js/vendor/typerendering-1.1.0.min.js"></script>
 <script src="assets/js/vendor/justice.min.js"></script>
-<script>Justice.init();</script>
-<script src="assets/js/main.js"></script>
+<!-- <script>Justice.init();</script>
+<script src="assets/js/main.js"></script> -->
 </body>
 </html>
 
