Comment Justice.js

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
     }( this ));
 </script> -->
 <script src="assets/js/vendor/typerendering-1.1.0.min.js"></script>
-<script src="assets/js/vendor/justice.min.js"></script>
-<!-- <script>Justice.init();</script>
-<script src="assets/js/main.js"></script> -->
+<!-- <script src="assets/js/vendor/justice.min.js"></script>
+<script>Justice.init();</script> -->
+<script src="assets/js/main.js"></script>
 </body>
 </html>
 
